<resources>
    <string name="app_name">Music Discovery</string>

    <string name="index_page_title">Music Discovery App</string>

    <string name="artists_page_title">Artists</string>

    <string name="artist_details_title">Artist</string>

    <string name="back_button">Back</string>

    <string name="search_text">Search</string>

    <string name="test_tag_search_artists">test_tag_search_artists</string>
    <string name="test_tag_artist">test_tag_artist</string>
</resources>